clusters/home/documentation/focal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: production
  labels:
    app: focalboard
  name: focalboard-lb
  namespace: documentation
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 32095
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: focalboard
  sessionAffinity: None
  type: LoadBalancer
