clusters/home/documentation/focal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: focalboard-ingress
  namespace: documentation
spec:
  rules:
    - host:
      http:
        paths:
          - path: /focus
            pathType: Prefix
            backend:
              service:
                name:  focalboard
                port:
                  number: 8000
